<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".musicgallery.GalleryActivity">

    <RelativeLayout
            android:id="@+id/results_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"/>

        <TextView
                android:id="@+id/title_matching_albums"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/margin_text_top"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/matching_albums"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

        <TextView
                android:layout_width="wrap_content"
                android:layout_above="@id/image_stub_pre_loading"
                android:layout_marginBottom="@dimen/margin_text_top"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/search_big_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:textStyle="bold"/>

        <ImageView
                android:id="@+id/image_stub_pre_loading"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/cover_width"
                android:layout_height="@dimen/cover_height"
                android:src="@drawable/ic_vinyl_4_launcher"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_below="@id/image_stub_pre_loading"
                android:layout_marginTop="@dimen/margin_text_top"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/powered_by_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                android:textStyle="bold"/>

    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/search_loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

        <TextView
                android:layout_width="wrap_content"
                android:layout_above="@+id/image_stub_loading"
                android:layout_marginBottom="@dimen/margin_text_top"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/loading_str"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"/>

        <ImageView
                android:id="@+id/image_stub_loading"
                android:layout_centerInParent="true"
                android:layout_width="@dimen/cover_width"
                android:layout_height="@dimen/cover_height"
                android:src="@drawable/ic_vinyl_loading_black"/>

    </RelativeLayout>

</RelativeLayout>